--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="col-12 col-md-5 col-lg-6 order-md-2">
 
             <!-- Image -->
-            <img src="images/champion.avif" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
+            <img src="images/champion.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
 
           </div>
           <div class="col-12 col-md-7 col-lg-6 order-md-1" data-aos="fade-up">
@@ -191,7 +191,7 @@
           <div class="col-12 col-md-5 col-lg-6 order-md-2">
 
             <!-- Image -->
-            <img src="images/opportunities.avif" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
+            <img src="images/opportunities.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
 
           </div>
           <div class="col-12 col-md-7 col-lg-6 order-md-1" data-aos="fade-up">
@@ -245,7 +245,7 @@
 
               <!-- Device -->
               <div class="">
-                <img src="images/team-value.avif  " class="img-fluid" style="width:95%; height: 95%;" alt="..." data-aos="fade-up" data-aos-delay="100">
+                <img src="images/team-value.png" class="img-fluid" style="width:95%; height: 95%;" alt="..." data-aos="fade-up" data-aos-delay="100">
                 <!-- <img src="images/desktop-dashkit-alt-dark.jpg" class="device-screen" alt="...">
                 <img src="images/devices-macbook.svg" class="img-fluid" alt="..."> -->
               </div>
@@ -267,7 +267,7 @@
             <div class="card shadow-light-lg lift lift-lg">
 
               <!-- Image -->
-              <img src="images/trust-help.avif" alt="..." class="card-img-top">
+              <img src="images/trust-help.png" alt="..." class="card-img-top">
 
               <!-- Shape -->
               <div class="position-relative">
@@ -456,7 +456,7 @@
               <div class="img-skewed img-skewed-start">
 
                 <!-- Image -->
-                <img src="images/dashboard.avif" class="screenshot img-fluid img-skewed-item" alt="...">
+                <img src="images/dashboard.png" class="screenshot img-fluid img-skewed-item" alt="...">
 
               </div>
 
